	* Screenname colors in chats now chosen intelligently from GNOME
	  color palette
	* Conversation buffer scrollback limited to avoid large memory
	  usage in active conversations
	* Control-Shift-Tab will reverse cycle through the conversation tabs
	  (James Vega)
	* Many problems related to having an IM conversation and a chat open
	  with the same name are fixed (Andrew Hart)

	Sounds:
	* Beautiful new default sounds (Brad Turcotte)
	* Use libao for playing sounds via NAS instead of accessing NAS directly

	Log Viewer:
	* Log viewer aggregates logs from the same "Person" (Richard Laager)
	* When opening the log viewer, show the most recent log by default
	  (Peter McCurdy)

	Plugins:
	* Plugins are now accessed through a separate dialog from the Tools
	  menu of the Buddy List
	* Newly installed plugins can now be activated without restarting
	  Gaim (Sadrul Habib Chowdhury)
	* Overhauled the system tray/docklet plugin (Casey Harkins)
	* Text Replacement Plugin rewritten, works in real time and far more
	  intuitively (Benjamin Kahn with help from Richard Laager)
	* Entries in the text replacement plugin are now sorted
	  alphabetically (Richard Laager)
	* The Evolution Integration plugin now supports Groupwise contacts
	* Mono plugin loader (Eoin Coffey)
	* Perl plugin loader has been rewritten (John Kelm)
	* New music messaging plugin (Christian Muise)
	* gaim-remote has been superceded by new DBUS bindings within Gaim
	  (Piotr Zielinski)
	* The functionality of the auto-reconnect plugin has been
	  moved into the Gaim core, and the plugin itself has been
	  removed.

	MSN Features:
	* Custom smiley support (Irving Cordova & Francesco Fracassi)
	* Added support for sending (with the /nudge command) and receiving
	  "nudges" (Julien Cegarra, Martin Bayard)
	* Added an account action to open your Hotmail inbox from MSN

	Yahoo Features:
	* Stealth Settings have been implemented
	* Doodle is now supported (Andrew Dieffenbach)